--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -62,4 +62,6 @@ identifier_name:
 function_parameter_count:
   warning: 10
   error: 15
+nesting:
+    type_level: 4
 reporter: "xcode" # reporter type (xcode, json, csv, checkstyle, codeclimate, junit, html, emoji, sonarqube, markdown, github-actions-logging)
