HW 10. Implementation PayBasket

--- a/GBShop.xcodeproj/xcshareddata/xcschemes/GBShop.xcscheme
+++ b/GBShop.xcodeproj/xcshareddata/xcschemes/GBShop.xcscheme
@@ -27,7 +27,17 @@
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES"
-      codeCoverageEnabled = "YES">
+      codeCoverageEnabled = "YES"
+      onlyGenerateCoverageForSpecifiedTargets = "YES">
+      <CodeCoverageTargets>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "7AA5AD0925D8027A00D9F949"
+            BuildableName = "GBShop.app"
+            BlueprintName = "GBShop"
+            ReferencedContainer = "container:GBShop.xcodeproj">
+         </BuildableReference>
+      </CodeCoverageTargets>
       <Testables>
          <TestableReference
             skipped = "NO">
